- [BUG FIX] DB_FileMaker_FX used the alternative data source not only the 'issuedhash' table also 'authuer' and some
  tables for authorization/authentication. Now, it uses just the 'issuedhash' table for the alternative data source.
- [BUG FIX] Calculation for strings didn't work, ex. >...
- [BUG FIX] The target description with "style.display" for the calculated field is working.

Ver.4.5 (2014/9/15)
- Sync with multiple clients in update/insert/delete with Pusher. (except for FileMaker's portal=>true context)
- The 'navi-control' key can be specified in a context. The value for it are 'master', 'detail' and 'master-hide'. See the Practice/navi.html.
- Update FX.php (July 29, 2014) for DB_FileMaker_FX class.
- Modify setToDB() of DB_PDO.php to avoid outputting error messages in an error log file.
- Added the new sample 'Sample_pdf' to demonstrate how to create pdf file with the data from database.
- Update sample_schema_mysql.txt/sample_schema_sqlite.txt/sample_schema_pgsql.txt for syncing with multiple clients.
- Update TestDB.fmp12 to add tables ("registeredcontext" and "registeredpks") for syncing with multiple clients.
- [BUG FIX] The JavaScript code editor "codemirror" support plugin was modified. It works fine.
- [BUG FIX] DataConverter_FMDateTime class's dateArrayFromFMDate method can convert the Japanese Nengo style date
  expression, but the start date of Showa wasn't right date, it was backward to one year.

Ver.4.4 (2014/5/22)
- Multiple elements bound to the same field of the same table can synchronize in a page.
- Update samples to improve compatibility with CSP (Content Security Policy).
  (except Asset Management, Account Manager and JS Components Sample)
- Add Client-Side Calculation Page Samples for SQLite and PostgreSQL.
- Update sample_schema_mysql.txt to merge schema_data.txt of Sample_Extensible Sample.
- Avoid outputting error messages in an error log file when not specifying the 'context' key of the 'file-upload' 